--- a/app/css/onsen.scss
+++ b/app/css/onsen.scss
@@ -485,7 +485,7 @@ p {
   box-shadow: 0 5px 5px rgba(0,0,0,0.4);
   .ui-icon {
     display: block;
-    background-image: url(../svg.php??stroke=FFFFFF&file=icoon-betalen-ontvangen.svg);
+    background-image: url(../svg.php?stroke=FFFFFF&file=icoon-betalen-ontvangen.svg);
     background-size: contain;
     float: none;
     height: 30px;
@@ -659,7 +659,7 @@ p {
     cursor: not-allowed;
 
     .icon-person-add {
-      background-image: url(../svg.php??stroke=FFFFFF&file=icoon-klantworden.svg);
+      background-image: url(../svg.php?stroke=FFFFFF&file=icoon-klantworden.svg);
       background-size: 2em;
       display: block;
       height: 2em;
